Enhance project documentation with a detailed frontend feature blueprint and API requirements for future development.

--- a/專案企劃書.md
+++ b/專案企劃書.md
@@ -147,3 +147,25 @@
 - 實現更複雜的演算法，如 DQN。
 - 加入隨機性環境（Slippery Mode）。
 - 支援更複雜的地圖元素。
+
+---
+
+## 9. 前端功能藍圖（規劃中）
+
+本專案將於後續階段開發 Web 前端，主要分為以下模組：
+
+- **開始遊玩（手動模式）**：以鍵盤上下左右（方向鍵）操作角色於地圖上移動，顯示分數、步數、地圖狀態。
+- **建立地圖**：設定地圖大小，輸入代號或點擊建立地圖，命名保存（json 格式）。
+- **AI 遊玩**：選擇地圖、設定執行參數（演算法、學習率、回合數等）、運行 AI 訓練，顯示進度與結果。
+- **遊玩紀錄 / AI 分析**：顯示 AI 訓練結果（Q-Table、學習曲線、最優路徑等），支援圖表與數據視覺化。
+- **設定**：AI 模型設定（System Prompts、API key、模型名稱等），全域參數管理。
+
+### 前後端互動與 API 需求
+- 地圖 CRUD（建立、查詢、下載、刪除）API
+- 遊玩 session 狀態同步（手動模式）API
+- AI 訓練啟動、進度查詢、結果查詢 API
+- 分析結果查詢（學習曲線、最優路徑、Q-Table 熱力圖等）API
+- AI 設定管理 API
+- 所有資料格式（地圖、紀錄、分析結果）需標準化，便於前後端資料流整合
+
+---
