Refactor Q-learning and SARSA implementations to increase episode count to 500, update training parameters for epsilon and add support for random seed and optimistic initialization. Enhance analysis API to generate optimal path visualizations and improve error handling in training requests. Update frontend components for better user experience and consistency in displaying training results.

--- a/強化學習模型說明.md
+++ b/強化學習模型說明.md
@@ -3,189 +3,172 @@
 ## 概述
 本專案實作了兩種經典的強化學習演算法：**Q-Learning** 和 **SARSA**，用於解決 Grid World 環境中的路徑規劃問題。
 
-## 環境設定
+## 核心演算法
 
-### Grid World 環境
-- **狀態空間**：每個格子位置 (i, j) 代表一個狀態
-- **動作空間**：{上, 下, 左, 右} 四個動作
-- **地圖元素**：
-  - `S`：起點 (Start)
-  - `G`：目標 (Goal)，獎勵 +100
-  - `R`：獎勵點 (Reward)，獎勵 +10
-  - `T`：陷阱 (Trap)，獎勵 -50
-  - `1`：障礙物 (Obstacle)，獎勵 -100
-  - `0`：空白格子，獎勵 -1
+### 1. Q-Learning（離線型強化學習）
 
-### 終止條件
-- 到達目標 (Goal)
-- 達到最大步數 (MAX_STEPS = 100)
+#### 理論基礎
+Q-Learning 是一種 off-policy（離策略）的強化學習演算法，它學習的是最優動作價值函數 Q*(s,a)，而不依賴於當前執行的策略。
 
-## Q-Learning 演算法
-
-### 理論基礎
-Q-Learning 是一種 **off-policy** 的強化學習演算法，使用 Q-Table 來儲存狀態-動作價值函數。
-
-### 核心公式
+#### 核心公式
 ```
 Q(s,a) ← Q(s,a) + α[r + γ max Q(s',a') - Q(s,a)]
 ```
 
 其中：
-- `Q(s,a)`：狀態 s 下執行動作 a 的價值
-- `α`：學習率 (learning_rate)
-- `r`：即時獎勵
-- `γ`：折扣因子 (discount_factor)
-- `s'`：下一個狀態
-- `a'`：下一個動作
+- **Q(s,a)**：狀態 s 下執行動作 a 的價值
+- **α**：學習率（learning rate）
+- **r**：即時獎勵
+- **γ**：折扣因子（discount factor）
+- **s'**：下一個狀態
+- **a'**：下一個動作
 
-### 實作特點
-1. **Off-policy**：使用 ε-greedy 策略選擇動作，但更新時考慮所有可能動作的最大值
-2. **探索策略**：ε-greedy 策略
-   - 機率 ε：隨機選擇動作
-   - 機率 1-ε：選擇 Q 值最大的動作
-3. **Q-Table 結構**：`{(i, j, action): Q_value}`
+#### 實作特點
+- 使用 ε-greedy 策略平衡探索與利用
+- 直接學習最優策略，不受當前策略影響
+- 更新時使用所有可能動作的最大 Q 值
 
-### 關鍵程式碼
-```python
-# Q-Learning 更新
-q_key = (state[0], state[1], action)
-next_qs = [q_table.get((next_pos[0], next_pos[1], a), 0.0) for a in next_valid_actions]
-max_next_q = max(next_qs) if next_qs else 0.0
-q_table[q_key] = q_table.get(q_key, 0.0) + learning_rate * (reward + discount_factor * max_next_q - q_table.get(q_key, 0.0))
-```
+### 2. SARSA（在線型強化學習）
 
-## SARSA 演算法
+#### 理論基礎
+SARSA 是一種 on-policy（在策略）的強化學習演算法，它學習的是當前策略下的動作價值函數 Qπ(s,a)。
 
-### 理論基礎
-SARSA 是一種 **on-policy** 的強化學習演算法，名稱來自於 (State, Action, Reward, State, Action)。
-
-### 核心公式
+#### 核心公式
 ```
 Q(s,a) ← Q(s,a) + α[r + γ Q(s',a') - Q(s,a)]
 ```
 
-其中：
-- `Q(s,a)`：狀態 s 下執行動作 a 的價值
-- `α`：學習率 (learning_rate)
-- `r`：即時獎勵
-- `γ`：折扣因子 (discount_factor)
-- `s'`：下一個狀態
-- `a'`：實際執行的下一個動作
+#### 實作特點
+- 需要先選擇下一個動作 a'
+- 使用實際選擇的動作的 Q 值進行更新
+- 更保守，避免危險動作
 
-### 實作特點
-1. **On-policy**：使用相同的策略選擇動作和更新 Q 值
-2. **探索策略**：ε-greedy 策略（與 Q-Learning 相同）
-3. **動作選擇**：需要先選擇下一個動作，再更新當前 Q 值
+## 關鍵參數
 
-### 關鍵程式碼
-```python
-# SARSA 更新
-q_key = (state[0], state[1], action)
-if next_valid_actions:
-    if np.random.rand() < epsilon:
-        next_action = np.random.choice(next_valid_actions)
-    else:
-        next_q_vals = [q_table.get((next_pos[0], next_pos[1], a), -np.inf) for a in next_valid_actions]
-        max_next_q = np.max(next_q_vals)
-        best_next_actions = [a for a, q in zip(next_valid_actions, next_q_vals) if q == max_next_q]
-        next_action = np.random.choice(best_next_actions)
-    next_q = q_table.get((next_pos[0], next_pos[1], next_action), 0.0)
-else:
-    next_q = 0.0
-
-q_table[q_key] = q_table.get(q_key, 0.0) + learning_rate * (reward + discount_factor * next_q - q_table.get(q_key, 0.0))
-```
-
-## 參數說明
-
-### 學習率 (Learning Rate, α)
-- **範圍**：0 < α ≤ 1
-- **作用**：控制新資訊對 Q 值更新的影響程度
+### 1. 學習率 (α)
+- **作用**：控制新知識覆蓋舊知識的速度
+- **範圍**：0 ~ 1
 - **預設值**：0.1
-- **影響**：
-  - 較大：學習快速但可能不穩定
-  - 較小：學習穩定但速度慢
+- **建議值**：0.1 ~ 0.5
 
-### 折扣因子 (Discount Factor, γ)
-- **範圍**：0 ≤ γ < 1
-- **作用**：平衡即時獎勵和未來獎勵的重要性
+### 2. 折扣因子 (γ)
+- **作用**：平衡即時獎勵與未來獎勵的重要性
+- **範圍**：0 ~ 1
 - **預設值**：0.95
-- **影響**：
-  - 較大：重視長期獎勵
-  - 較小：重視短期獎勵
+- **建議值**：0.8 ~ 0.99
 
-### 探索率 (Epsilon, ε)
-- **範圍**：0 ≤ ε ≤ 1
-- **作用**：控制探索與利用的平衡
-- **預設值**：0.1
-- **影響**：
-  - 較大：更多探索，學習新策略
-  - 較小：更多利用，執行已知最佳策略
+### 3. 探索率 (ε)
+- **作用**：控制隨機探索的機率
+- **範圍**：0 ~ 1
+- **預設值**：1.0（初始值）
+- **衰減機制**：指數衰減到 0.01
+- **建議值**：0.5 ~ 1.0（初始值）
 
-### 訓練回合數 (Episodes)
-- **預設值**：500
-- **作用**：控制訓練的總回合數
-- **影響**：回合數越多，學習效果越好，但訓練時間越長
+## 環境設定
 
-## Q-Learning vs SARSA 比較
+### Grid World 元素
+- **S**：起點（Start）
+- **G**：目標（Goal）
+- **R**：獎勵點（Reward）
+- **T**：陷阱（Trap）
+- **1**：障礙物（Obstacle）
+- **0**：空地（Empty）
+
+### 獎勵設計
+- **目標 (G)**：+100
+- **獎勵點 (R)**：+10
+- **陷阱 (T)**：-50
+- **空地 (0)**：-1
+- **障礙物 (1)**：無法進入
+
+### 終止條件
+- 到達目標 (G)
+- 進入陷阱 (T)
+- 達到最大步數
+
+## 演算法比較
 
 | 特性 | Q-Learning | SARSA |
 |------|------------|-------|
-| **策略類型** | Off-policy | On-policy |
-| **更新方式** | 使用最大 Q 值 | 使用實際選擇的動作 |
-| **收斂性** | 收斂到最優策略 | 收斂到當前策略的最優值 |
-| **穩定性** | 較不穩定 | 較穩定 |
-| **適用場景** | 需要最優解 | 需要安全策略 |
-| **計算複雜度** | 較低 | 較高 |
+| 策略類型 | Off-policy | On-policy |
+| 更新方式 | 使用最大 Q 值 | 使用實際選擇的 Q 值 |
+| 探索性 | 更積極 | 更保守 |
+| 收斂速度 | 較快 | 較慢 |
+| 穩定性 | 較低 | 較高 |
+| 適用場景 | 追求最優解 | 安全性要求高 |
 
 ## 輸出結果
 
-### Q-Table (q_table.csv)
-包含每個狀態-動作對的 Q 值：
-```csv
-state,action,value
-(0,0),up,0.5
-(0,0),right,0.8
-(0,1),up,0.3
-...
-```
+### 1. Q-Table
+- 格式：CSV 檔案
+- 內容：每個狀態-動作對的 Q 值
+- 用途：分析學習結果，找出最優路徑
 
-### 訓練記錄 (log.csv)
-記錄每個步驟的詳細資訊：
-```csv
-episode,step,state,action,reward,next_state,done
-1,1,(0,0),right,-1,(0,1),False
-1,2,(0,1),down,10,(1,1),False
-...
-```
+### 2. 訓練記錄
+- 格式：CSV 檔案
+- 內容：每步的狀態、動作、獎勵、探索率
+- 用途：分析學習過程，繪製學習曲線
 
-## 最佳化建議
+### 3. 學習曲線
+- 格式：PNG 圖片
+- 內容：獎勵、步數、探索率隨回合的變化
+- 用途：評估學習效果，調整參數
 
-1. **參數調優**：
-   - 根據環境複雜度調整學習率
-   - 根據任務性質調整折扣因子
-   - 使用衰減的探索率
+## 優化建議
 
-2. **獎勵設計**：
-   - 確保獎勵函數能引導到目標
-   - 避免獎勵稀疏問題
-   - 考慮使用獎勵塑形 (Reward Shaping)
+### 1. 探索率衰減
+- 使用指數衰減：ε = ε_start × (decay_rate)^episode
+- 從高探索開始，逐漸轉向利用
+- 避免過早收斂到局部最優
 
-3. **訓練策略**：
-   - 使用經驗回放 (Experience Replay)
-   - 實作目標網路 (Target Network)
-   - 考慮使用優先級經驗回放
+### 2. 隨機種子設定
+- 設定固定的隨機種子
+- 確保結果可重現
+- 便於實驗比較
 
-## 擴展可能性
+### 3. 樂觀初始化
+- 將 Q-Table 初始值設為較高值
+- 鼓勵探索所有狀態-動作對
+- 可能加速收斂
 
-1. **深度強化學習**：
-   - DQN (Deep Q-Network)
-   - DDPG (Deep Deterministic Policy Gradient)
+### 4. 地圖驗證
+- 檢查地圖是否包含起點和目標
+- 確保地圖格式正確
+- 避免訓練失敗
 
-2. **多智能體強化學習**：
-   - 競爭環境
-   - 合作環境
+## 未來擴展
 
-3. **連續動作空間**：
-   - Actor-Critic 方法
-   - Policy Gradient 方法 
+### 1. 進階演算法
+- **SARSA(λ)**：使用資格跡提高學習效率
+- **期望 SARSA**：平衡 SARSA 和 Q-Learning
+- **雙重 Q-Learning**：減少過度估計問題
+
+### 2. 環境擴展
+- **連續狀態空間**：使用函數近似
+- **多智能體環境**：協作與競爭
+- **動態環境**：環境變化適應
+
+### 3. 應用領域
+- **機器人導航**：路徑規劃
+- **遊戲 AI**：策略學習
+- **資源分配**：優化決策
+
+## 使用建議
+
+### 1. 參數調優順序
+1. 調整學習率 (α)
+2. 調整折扣因子 (γ)
+3. 調整探索率衰減
+4. 嘗試樂觀初始化
+
+### 2. 演算法選擇
+- **一般情況**：優先使用 Q-Learning
+- **安全性要求高**：使用 SARSA
+- **需要穩定性**：使用 SARSA
+- **追求最優解**：使用 Q-Learning
+
+### 3. 實驗設計
+- 使用相同隨機種子比較不同參數
+- 多次運行取平均值
+- 記錄完整的實驗配置
+- 分析學習曲線的穩定性 
